# Distcomp

./: .gitignore  LICENSE  README.md  Task330.7z  Tasks 340-350.7z  pom.xml
151004/Haiko/: README.md
310/: pom.xml
310971/: README.md
310971/Khulup/: .gitignore
310971/LizaRogach/: pom.xml
310971/task310-rest/: README.md  pom.xml
310971/task320-jpa/: CHECK_DATABASE.md  FIX_SQL_QUERIES.md  FIX_TABLE_STRUCTURE.md  README.md  pom.xml  (+4 more)
330/: Условия.docx
340/: Условия.docx
350/: 340.txt
351001/Budnikov/publisher/: pyproject.toml
351001/Budnikov/publisher/src/: main.py
351001/Budnikov/publisher/src/api/v2/: router.py
351001/Budnikov/publisher/src/api/v2/endpoints/: auth.py  editors.py  issues.py  labels.py  posts.py
351001/Budnikov/publisher/src/core/: cache.py  security.py
351001/Budnikov/publisher/src/dependencies/: auth.py
351001/Budnikov/publisher/src/models/: editor.py
351001/Budnikov/publisher/src/schemas/: dto.py
351001/Budnikov/publisher/src/services/: base.py  editor.py  issue.py  post.py
361/: Условия.docx
Kafka340/: example  pom.xml  test-kafka.ps1
NoSQL330/: pom.xml
Redis350/: Clear-RedisPorts.ps1  docker-compose.yml  dump.rdb  example  init-all.bat  init-cassandra.cql  start-redis.sh
Task310/: pom.xml
Task320/: pom.xml  Текстовый документ.txt
Task330/: pom.xml
Task350/: pom.xml
discussion/: pom.xml
publisher/: pom.xml
task310/: pom.xml
task310-rest/: .gitignore  pom.xml
task320/: pom.xml
task320-jpa/: Dockerfile  QUICK_START.md  complete_project.sh  create_remaining_files.sh  docker-compose.yml  pom.xml
(+7205 files in other folders)
