[project]
name = "budnikov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "tortoise-orm>=1.1.0",
    "uvicorn>=0.44.0",
    "redis>=5.0.3",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",

]

[tool.ruff]
line-length = 120

[tool.uv.workspace]
members = [
    "discussion",
]

